--- a/app/templates/achievement_form.html
+++ b/app/templates/achievement_form.html
@@ -65,8 +65,8 @@
             </div>
             
             <div class="form-actions">
-                <button type="submit" class="btn btn-success">Save Achievement</button>
-                <a href="{{ url_for('settings_bp.settings', default_tab='achievements') }}" class="btn btn-primary">Cancel</a>
+                <button type="submit" class="btn btn-success">Save</button>
+                <a href="{{ url_for('settings_bp.settings', default_tab='achievements') }}" class="btn btn-danger">Cancel</a>
             </div>
         </form>
     </div>
