--- a/app/templates/partials/_achievement_modal.html
+++ b/app/templates/partials/_achievement_modal.html
@@ -64,11 +64,11 @@
       </div>
 
       <div class="planner-modal-footer">
-        <button type="button" class="planner-btn planner-btn-secondary" onclick="closeAchievementModal()">
+        <button type="button" class="planner-btn btn-danger" onclick="closeAchievementModal()">
           Cancel
         </button>
-        <button type="submit" id="save-achievement-btn" class="planner-btn planner-btn-success">
-          Save Achievement
+        <button type="submit" id="save-achievement-btn" class="planner-btn btn-success">
+          Save 
         </button>
       </div>
     </form>
