--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -700,7 +700,7 @@
 <div id="excomm-modal" class="modal" style="display: none;">
   <div class="modal-content">
     <span class="close" onclick="closeExcommModal()">&times;</span>
-    <h2 id="excomm-modal-title">Add/Edit Excomm Team</h2>
+    <h2 id="excomm-modal-title" style="margin-top: 0;">Add/Edit Excomm Team</h2>
     <form id="excomm-form">
       <input type="hidden" id="excomm-id" name="id">
       
